@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>br.com.arqdev</groupId>
@@ -8,9 +10,9 @@
   <version>1.0-SNAPSHOT</version>
 
   <parent>
-      <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-parent</artifactId>
-      <version>2.1.6.RELEASE</version>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-parent</artifactId>
+    <version>2.1.6.RELEASE</version>
   </parent>
 
   <name>java-11-project</name>
@@ -23,10 +25,10 @@
     <maven.compiler.target>11</maven.compiler.target>
     <java.version>11</java.version>
   </properties>
-  
+
   <dependencyManagement>
     <dependencies>
-      <!--dozer-->
+      <!--dozer -->
       <dependency>
         <groupId>net.sf.dozer</groupId>
         <artifactId>dozer</artifactId>
@@ -60,7 +62,7 @@
   </dependencyManagement>
 
   <dependencies>
-    <!--spring-boot-->
+    <!--spring-boot -->
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-web</artifactId>
@@ -85,7 +87,7 @@
       <scope>test</scope>
     </dependency>
 
-    <!--database drivers-->
+    <!--database drivers -->
     <dependency>
       <groupId>com.h2database</groupId>
       <artifactId>h2</artifactId>
@@ -103,13 +105,13 @@
       <artifactId>spring-boot-starter-validation</artifactId>
     </dependency>
 
-    <!--flyway-->
+    <!--flyway -->
     <dependency>
       <groupId>org.flywaydb</groupId>
       <artifactId>flyway-core</artifactId>
     </dependency>
 
-    <!--lombok-->
+    <!--lombok -->
     <dependency>
       <groupId>org.projectlombok</groupId>
       <artifactId>lombok</artifactId>
@@ -117,7 +119,8 @@
   </dependencies>
 
   <build>
-    <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
+    <pluginManagement><!-- lock down plugins versions to avoid using Maven 
+        defaults (may be moved to parent pom) -->
       <plugins>
         <!-- clean lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#clean_Lifecycle -->
         <plugin>
@@ -133,8 +136,8 @@
           <artifactId>maven-compiler-plugin</artifactId>
           <version>3.8.0</version>
           <configuration>
-            <!--Lombok não estava gerando getters, setters e etc...-->
-            <!--https://github.com/rzwitserloot/lombok/issues/1723#issuecomment-458435816-->
+            <!--Lombok não estava gerando getters, setters e etc... -->
+            <!--https://github.com/rzwitserloot/lombok/issues/1723#issuecomment-458435816 -->
             <annotationProcessorPaths>
               <path>
                 <groupId>org.projectlombok</groupId>
@@ -147,6 +150,22 @@
         <plugin>
           <artifactId>maven-surefire-plugin</artifactId>
           <version>2.22.1</version>
+          <configuration>
+            <argLine>
+              --illegal-access=permit
+            </argLine>
+            <forkCount>0</forkCount>
+          </configuration>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-failsafe-plugin</artifactId>
+          <version>2.22.1</version>
+          <configuration>
+            <argLine>
+              --illegal-access=permit
+            </argLine>
+          </configuration>
         </plugin>
         <plugin>
           <artifactId>maven-jar-plugin</artifactId>
